alb_ingress_setup_21/02-services.yaml
---
# API Service
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
# Admin Service
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
# Dashboard Service
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  type: ClusterIP
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
